[project]
name = "pageindex"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10, <3.11"
dependencies = [
    "openai>=1.0.0",
    "pypdf>=4.0.0",
    "python-dotenv>=1.0.0",
    "tiktoken>=0.7.0",
    "pyyaml>=6.0.0",
]

[dependency-groups]
dev = [
    "basedpyright>=1.38.4",
    "ruff>=0.15.8",
]
